--- a/index.html
+++ b/index.html
@@ -125,6 +125,17 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of São Paulo</h3>
+            <div class="subheading mb-3">Postdoctoral</div>
+            <div>AutoAI-Pandemics: Democratizing Machine Learning for Analysis, Study, and Control of Epidemics and Pandemics</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2024 - Current</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">University of São Paulo</h3>
             <div class="subheading mb-3">PhD degree</div>
             <div>PhD in Computer Science and Computational Mathematics</div>
             <div>Sandwich Period in Helmholtz-Zentrum für Umweltforschung</div>
@@ -608,7 +619,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+    <!--<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Project Developed as a Student or Supervisor</h2>
         <ul class="fa-ul mb-0">
@@ -734,7 +745,7 @@
            </li>
 
             </ul>
-    </section>
+    </section>-->
 
    <hr class="m-0">
 
@@ -976,11 +987,15 @@
       <div class="w-100">
         <h2 class="mb-5">Softwares/Tools/Packages</h2>
 
-        <p class="mb-0"><a href="#">[Link] - </a>Other Softwares/Tools/Packages can be viewed in the projects section</p>
+        <p class="mb-0">
+        <a href="https://bonidia.github.io/BioFatecou-Page/">[Link]</a>
+        <a href="https://autoaipandemics.icmc.usp.br/">[Link] - </a>All Softwares/Tools/Packages can be viewed at these links</p>
         
         </br>
 
-        <p class="mb-0"><a href="https://github.com/Bonidia/BioAutoML">[Link] - </a> BioAutoML: Automated Feature Engineering and Metalearning</p>
+        <p class="mb-0">
+        <a href="https://bonidia.github.io/BioAutoML-WP/">[Link]</a>
+        <a href="https://github.com/Bonidia/BioAutoML">[Link] - </a> BioAutoML: Automated Feature Engineering and Metalearning</p>
         
         </br>
 
@@ -1026,6 +1041,12 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="news">
       <div class="w-100">
         <h2 class="mb-5">News About Our Projects</h2>
+
+        <p class="mb-0">
+        <a href="https://bonidia.github.io/BioFatecou-Page/">[Link 51]</a>
+        <a href="https://autoaipandemics.icmc.usp.br/">[Link 52] - </a>All news can be viewed at these links</p>
+
+        </br>
 
         <p class="mb-0"><a href="https://www.amazon.com.br/Ci%C3%AAncia-Dados-Fundamentos-Andr%C3%A9-Carvalho/dp/8521638752?source=ps-sl-shoppingads-lpcontext&ref_=fplfs&psc=1&smid=AQXR8211CVV7V">[Link 50] - </a>
         In just ten days, our book achieved the rank of Top 7 in Probability and Statistics and Top 9 in Science, Mathematics, and Technology categories on Amazon in terms of sales</p>
