--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </p>
 
         <div class="social-icons">
-          <a href="https://br.linkedin.com/in/robson-parmezan-bonidia-8b1b8890?trk=people-guest_profile-result-card_result-card_full-click">
+          <a href="https://www.linkedin.com/in/robson-parmezan-bonidia-phd-8b1b8890">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/bonidia">
