--- a/index.html
+++ b/index.html
@@ -53,16 +53,10 @@
           <a class="nav-link js-scroll-trigger" href="#cert">Certifications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#book">Books</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#production">Publications</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#production2">Technical Production</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards/Grants</a>
@@ -170,7 +164,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">2017 - 2018</span>
             </div>
-          </div>
+        </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -220,6 +214,27 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Professor and Researcher</h3>
+            <div class="subheading mb-3">Federal University of Technology - Paraná/Brazil (UTFPR)</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2024 - Current</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">University of São Paulo</h3>
+            <div class="subheading mb-3">Postdoctoral</div>
+            <div>AutoAI-Pandemics: Democratizing Machine Learning for Analysis, Study, and Control of Epidemics and Pandemics</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2024 - Current</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Helmholtz Visiting Researcher</h3>
             <div class="subheading mb-3"> Helmholtz-Zentrum für Umweltforschung, UFZ, Germany</div>
           </div>
@@ -234,7 +249,7 @@
             <div class="subheading mb-3">Fatec - Faculdade de Tecnologia de Ourinhos, FATEC, Brazil</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2021 - Current</span>
+            <span class="text-primary">2021 - 2024</span>
           </div>
         </div>
 
@@ -600,7 +615,7 @@
       </div>
     </section>
 
-    <hr class="m-0">
+    <!--<hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="production2">
       <div class="w-100">
@@ -617,7 +632,7 @@
             Instituição de registro: INPI - Instituto Nacional da Propriedade Industrial.</p>
     </section>
 
-    <hr class="m-0">
+    <hr class="m-0">-->
 
     <!--<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
@@ -753,6 +768,15 @@
       <div class="w-100">
         <h2 class="mb-5">Awards/Grants/ScholarShips</h2>
         <ul class="fa-ul mb-0">
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://bonidia.github.io/BioFatecou-Page/">[Link 1]</a> 
+            <a href="https://autoaipandemics.icmc.usp.br/">[Link 2]</a> 
+            All awards can be viewed at these links
+           </li>
+
+          </br>
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
