--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Professor and Researcher</h3>
-            <div class="subheading mb-3">Federal University of Technology - Paraná/Brazil (UTFPR)</div>
+            <h3 class="mb-0">Federal University of Technology - Paraná/Brazil (UTFPR)</h3>
+            <div class="subheading mb-3">Professor and Researcher</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2024 - Current</span>
