--- a/index.html
+++ b/index.html
@@ -1066,6 +1066,14 @@
             <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://www.digitalocean.com/community/pages/hollies-hub-for-good">[Link]</a> 
+            Hollie's Hub for Good - InteliGente: Building Paths of Equality with Artificial Intelligence, 2024 ($2.750,00).
+           </li>
+      
+           </br>
+
+            <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://www.digitalocean.com/community/pages/hollies-hub-for-good">[Link]</a> 
             Hollie's Hub for Good - DigitalOcean. BioFatecou: Introducing Undergraduates to Academic Research, 2023 ($2.750,00).
            </li>
       
