--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="Certificate HVRG_Bonidia-1.pdf">[Link]</a> 
-            Helmholtz Visiting Researcher Grant/Award - Helmholtz Information & Data Science Academy (HIDA), 2023. Project Title: BioAutoML-Fast: End-to-End Multi-Threaded Machine Learning Package for Life Sciences. 
+            Helmholtz Visiting Researcher Grant/Award - Helmholtz Information & Data Science Academy (HIDA), 2023. Project Title: BioAutoML-Fast: End-to-End Multi-Threaded Machine Learning Package for Life Sciences (€: 10.000,00). 
            </li>
         
           </br>
