--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
             for Digital Innovation in Latin America and the Caribbean (FRIDA), receiving a $10,000 prize.
            </li>
 
-          </br>
+           </br>
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
@@ -880,6 +880,26 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://www.prototypesforhumanity.com/project/bioautoml/">[Link 1]</a> 
+            <a href="https://www.linkedin.com/posts/robson-parmezan-bonidia-phd-8b1b8890_na-semana-passada-tivemos-a-honra-de-participar-activity-7266779836906418177-Pj6f?utm_source=share&utm_medium=member_desktop">[Link 2]</a> 
+            <a href="https://www.prototypesforhumanity.com/">[Link 3]</a> 
+            BioAutoML - Project selected to participate in Prototypes for Humanity 2024, chosen from 2700 entries, from more than 100 countries, standing out among the 100 best in the world, Prototypes for Humanity 2024.
+           </li>
+
+          </br>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://www.prototypesforhumanity.com/project/is-that-true/">[Link 1]</a> 
+            <a href="https://www.linkedin.com/posts/robson-parmezan-bonidia-phd-8b1b8890_na-semana-passada-tivemos-a-honra-de-participar-activity-7266779836906418177-Pj6f?utm_source=share&utm_medium=member_desktop">[Link 2]</a> 
+            <a href="https://www.prototypesforhumanity.com/">[Link 3]</a> 
+            Is That True? - Project selected to participate in Prototypes for Humanity 2024, chosen from 2700 entries, from more than 100 countries, standing out among the 100 best in the world, Prototypes for Humanity 2024.
+           </li>
+
+          </br>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://cemeai.icmc.usp.br/pesquisa-de-ia-orientada-no-icmc-usp-vai-representar-o-brasil-na-cop-28-em-dubai/">[Link 1]</a> 
             <a href="https://www.prototypesforhumanity.com/project/bioprediction-framework/">[Link 2]</a> 
             <a href="https://www.prototypesforhumanity.com/">[Link 3]</a> 
@@ -906,6 +926,15 @@
             <a href="https://www.instagram.com/p/C82BYmkuAFN/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA%3D%3D&img_index=1">[Link 3]</a> 
             <a href="https://bonidia.github.io/InteliGente/assets/figures/91.pdf">[Link 4]</a> 
             Our BioAutoML project received third place in the ARTUR ZIVIANI THESIS AWARD (SBCAS), being chosen among the best theses in computing applied to health in Brazil, 2024.
+           </li>
+
+          </br>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://www.linkedin.com/posts/robson-parmezan-bonidia-phd-8b1b8890_jpmorganchase-gic24-finalists-activity-7260394271516594178-93hm?utm_source=share&utm_medium=member_desktop">[Link 1]</a> 
+            <a href="https://www.socialshifters.co/">[Link 2]</a> 
+            InteliGente – Finalist – Global Innovation Challenge 2024 (Social Shifters), recognized for innovative solutions with social impact (Among thousands of projects). Sponsored by JPMorganChase, the challenge offers awards up to USD 3,000 for outstanding innovation.
            </li>
 
           </br>
