--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,14 @@
 
            </br>
 
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://www.digitalocean.com/impact/nonprofits">[Link]</a> 
+            Hollie's Hub for Good - InteliGente: Building Paths of Equality with Artificial Intelligence, 2025 ($2.750,00).
+           </li>
+      
+           </br>
+
             <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://www.digitalocean.com/community/pages/hollies-hub-for-good">[Link]</a> 
