--- a/index.html
+++ b/index.html
@@ -871,6 +871,14 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://www.gov.br/capes/pt-br/assuntos/premios/premio-capes-de-tese/premio-capes-de-tese-documentos-relacionados">[Link 1]</a> 
+            Honorable Mention – CAPES Thesis Award (2025). Recognized as one of the best doctoral theses in Brazil in the field of Computer Science and Mathematics. CAPES is Brazil’s top national award for PhD theses (Honorable Mention indicates recognition among the best theses in the country).
+           </li>
+
+          </br>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://saocarlos.usp.br/em-ciencia-da-computacao-doutorando-da-usp-sao-carlos-conquista-medalha-de-ouro-no-global-undergraduate-award-2024/">[Link 1]</a> 
             <a href="https://gua.soutron.net/Portal/Default/en-GB/RecordView/Index/3202">[Link 2]</a> 
             <a href="https://undergraduateawards.com/winners/global-winners-2024">[Link 3]</a> 
@@ -1134,6 +1142,13 @@
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://sei.utfpr.edu.br/sei/publicacoes/controlador_publicacoes.php?acao=publicacao_visualizar&id_documento=4384974&id_orgao_publicacao=0">[Link]</a>
             1 place in the UTFPR-CP Public Contest, position of Effective Federal Professor, Paraná, Brazil.
+           </li>
+
+          </br>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Co-author of the scientific paper awarded first place at the 10th Paraíba Congress of Endocrinology and Metabolism — Machine Learning in Central Adrenal Insufficiency, organized by the Brazilian Society of Endocrinology and Metabolism – Paraíba Regional.
            </li>
 
           </br>
