--- a/index.html
+++ b/index.html
@@ -46,20 +46,23 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Skills and Expertise</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#cert">Certifications</a>
-        </li>
+        </li>-->
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#book">Books</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#production">Publications</a>
+          <a class="nav-link js-scroll-trigger" href="https://scholar.google.com.br/citations?user=kTbx_wMAAAAJ&hl=pt-BR">Publications</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards/Grants</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="https://inteligentehub.com.br/">InteliGente</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="http://autoai.inteligentehub.com.br/">AutoAI-Pandemics</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#soft">Softwares</a>
@@ -78,9 +81,9 @@
         <h1 class="mb-0">Robson P.
           <span class="text-primary">Bonidia</span>
         </h1>
-        <div class="subheading mb-5">PhD in Computer Science and Computational Mathematics
+        <div class="subheading mb-5">AI researcher, educator, and social innovator dedicated to democratizing Artificial Intelligence
           <br/>
-          Contact: <a href="rpbonidia@gmail.com">rpbonidia@gmail.com </a> or <a href="bonidia@usp.br">bonidia@usp.br </a>
+          Contact: <a href="rpbonidia@gmail.com">rpbonidia@gmail.com </a> or <a href="bonidia@utfpr.edu.br">bonidia@utfpr.edu.br </a>
           <!--<br/>
           Curriculum: <a href="CompleteCV.pdf">Access</a>-->
           <br/>
@@ -89,7 +92,8 @@
           Citations: <a href="https://scholar.google.com.br/citations?user=kTbx_wMAAAAJ&hl=pt-BR">Access</a>
           <br/>
           Orcid iD: <a href="https://orcid.org/0000-0003-4975-7867">0000-0003-4975-7867</a><br/>
-          <b>See our book:</b><a href="https://www.grupogen.com.br/e-book-ciencia-de-dados-fundamentos-e-aplicacoes-andre-carlos-ponce-de-leon-ferreira-de-carvalho-editora-ltc-9788521638766"> Data science - Fundamentals and Applications</a>
+          <b>See our book:</b><a href="https://www.grupogen.com.br/e-book-ciencia-de-dados-fundamentos-e-aplicacoes-andre-carlos-ponce-de-leon-ferreira-de-carvalho-editora-ltc-9788521638766"> Data science - Fundamentals and Applications</a><br/>
+          <b>Meet InteliGente:</b><a href="https://bonidia.github.io/InteliGente/"> Our project on AI education</a>
         </div>
         <p class="lead mb-5">
         Robson Parmezan Bonidia is an AI researcher, educator, and social innovator dedicated to democratizing Artificial Intelligence for the Global South. With over 28 awards and recognitions, his groundbreaking projects—such as InteliGente and BioAutoML—have impacted thousands of people. His work has been featured in major media outlets and endorsed by institutions like Google, AI4PEP, and FRIDA. A firm believer in AI for social good, Robson empowers educators, students, and scientists to harness AI ethically and responsibly, bridging the gap between cutting-edge technology and underserved communities. He holds a Ph.D. in Computer Science and Computational Mathematics from the University of São Paulo (USP). He also earned a degree in Information Security Technology from the Faculdade Estadual de Tecnologia de Ourinhos (FATEC — Centro Paula Souza), and holds a specialization in Computer Networks and a Master’s degree in Bioinformatics, both from the Federal University of Technology – Paraná (UTFPR). Currently, he serves as a member of the Steering Committee of the Global South Artificial Intelligence for Pandemic and Epidemic Preparedness and Response Network (AI4PEP) and is a professor at UTFPR — Cornélio Procópio campus.
@@ -383,7 +387,7 @@
         </br>
         <div class="subheading mb-3">Formação Complementar: <a href="http://lattes.cnpq.br/1572375422051077">Acessar</a></div>
       </div>
-    </section>-->
+    </section>
 
     <hr class="m-0">
 
@@ -634,7 +638,7 @@
             Information system for participatory digital governance, 2017. v. XII. p. 143-150.</p>
     
       </div>
-    </section>
+    </section>-->
 
     <!--<hr class="m-0">
 
@@ -787,12 +791,12 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards/Grants/ScholarShips</h2>
+        <h2 class="mb-5">Awards and Recognition</h2>
         <ul class="fa-ul mb-0">
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://bonidia.github.io/BioFatecou-Page/">[Link 1]</a> 
+            <a href="https://inteligentehub.com.br/">[Link 1]</a> 
             <a href="https://autoaipandemics.icmc.usp.br/">[Link 2]</a> 
             All awards can be viewed at these links
            </li>
@@ -1244,7 +1248,7 @@
         <h2 class="mb-5">Softwares/Tools/Packages</h2>
 
         <p class="mb-0">
-        <a href="https://bonidia.github.io/BioFatecou-Page/">[Link]</a>
+        <a href="https://inteligentehub.com.br/">[Link]</a>
         <a href="https://autoaipandemics.icmc.usp.br/">[Link] - </a>All Softwares/Tools/Packages can be viewed at these links</p>
         
         </br>
@@ -1299,7 +1303,7 @@
         <h2 class="mb-5">News About Our Projects</h2>
 
         <p class="mb-0">
-        <a href="https://bonidia.github.io/BioFatecou-Page/">[Link 51]</a>
+        <a href="https://inteligentehub.com.br/">[Link 51]</a>
         <a href="https://autoaipandemics.icmc.usp.br/">[Link 52] - </a>All news can be viewed at these links</p>
 
         </br>
