--- a/index.html
+++ b/index.html
@@ -942,7 +942,15 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://hundred.org/en/innovations/inteligente">[Link 1]</a>  
-            InteliGente has been shortlisted for the HundrED Global Collection 2026, placing us among the most impactful and inspiring education initiatives in the world.
+            InteliGente has been selected for the HundrED Global Collection 2026, placing us among the most impactful and scalable innovations in education worldwide. InteliGente stood out among 800+ global innovations reviewed by 250 experts, being recognized as one of the world’s most impactful.
+           </li>
+
+          </br>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://www.sbc.org.br/inteligente-construindo-caminhos-de-igualdade-com-inteligencia-artificial/">[Link 1]</a>  
+            InteliGente received the official endorsement of the Brazilian Computer Society (SBC), the most important computing organization in the country, recognizing its relevance in Artificial Intelligence for education and social impact, 2025.
            </li>
 
           </br>
